[Add]Add WIP-base project save functionality:
Bugs:
- project mapping
- no save on nested tasks
