# src/main/kotlin/com/kp/futurecriteria/controller/ProjectController.kt
@@ -2,7 +2,7 @@ package com.kp.futurecriteria.controller
 
 
 import com.kp.futurecriteria.api.ProjectsApi
-import com.kp.futurecriteria.model.ProjectDto
+import com.kp.futurecriteria.model.SaveProjectReq
 import com.kp.futurecriteria.service.project.ProjectService
 import com.kp.futurecriteria.utility.ConstUtility.API_PROJECTS
 import org.springframework.http.ResponseEntity
@@ -20,8 +20,8 @@ class ProjectController(
 //        return ResponseEntity.ok(listOf(ProjectFactory().createSampleProject()))
 //    }
 
-    override fun projectsPut(projectDto: ProjectDto): ResponseEntity<Void> {
-        val savedProject = projectService.save(projectDto)
+    override fun projectsPut(saveProjectReq: SaveProjectReq): ResponseEntity<Void> {
+        val savedProject = projectService.save(saveProjectReq)
         val location: URI = UriComponentsBuilder
             .fromPath("$API_PROJECTS/{id}")
             .buildAndExpand(savedProject.id)
