# src/main/resources/api.yaml
@@ -18,7 +18,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ProjectDto'
+                  $ref: '#/components/schemas/SaveProjectReq'
     put:
       tags:
         - Projects
@@ -29,7 +29,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ProjectDto'
+              $ref: '#/components/schemas/SaveProjectReq'
+            example: {
+              "description": "Project 1",
+              "startDate": "2020-01-01",
+              "endDate": "2020-01-01",
+              "isPrivate": true,
+              "tasks": [
+                {
+                  "taskName": "Task 1",
+                  "taskDescription": "Task 1",
+                  "status": "TODO"
+                }
+              ]
+            }
       responses:
         '201':
           description: The created project
@@ -52,12 +65,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProjectDto'
+                $ref: '#/components/schemas/SaveProjectReq'
 components:
   schemas:
-    ProjectDto:
+    SaveProjectReq:
       type: object
       properties:
+        name:
+          type: string
         description:
           type: string
         startDate:
@@ -71,8 +86,8 @@ components:
         tasks:
           type: array
           items:
-            $ref: '#/components/schemas/TaskDto'
-    TaskDto:
+            $ref: '#/components/schemas/NestedTaskDto'
+    NestedTaskDto:
       type: object
       properties:
         taskName:
@@ -80,7 +95,7 @@ components:
         taskDescription:
           type: string
         project:
-          $ref: '#/components/schemas/ProjectDto'
+          type: number
         status:
           type: string
 
